--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<canvas id="c1"></canvas>
-	<canvas id="c2"></canvas>
+	<canvas id="c1" width="700" height="700"></canvas>
+	<canvas id="c2" width="700" height="700"></canvas>
+	<canvas id="c3" width="700" height="700"></canvas>
 	<script type="text/javascript" src="src/index.js"></script>
 </body>
 </html>
