test ctx.transform function

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 	<canvas id="c1" width="700" height="700"></canvas>
 	<canvas id="c2" width="700" height="700"></canvas>
 	<canvas id="c3" width="700" height="700"></canvas>
+	<canvas id="c4" width="700" height="700"></canvas>
+	<div>
+		<input type="range" id="a">a:<span id="aval">0</span>
+		<input type="range" id="b">b:<span id="bval">0</span>
+		<input type="range" id="c">c:<span id="cval">0</span>
+		<input type="range" id="d">d:<span id="dval">0</span>
+		<input type="range" id="e">e:<span id="eval">0</span>
+		<input type="range" id="f">f:<span id="fval">0</span>
+	</div>
 	<script type="text/javascript" src="src/index.js"></script>
 </body>
 </html>
