--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<input type="range" id="d">d:<span id="dval">0</span>
 		<input type="range" id="e">e:<span id="eval">0</span>
 		<input type="range" id="f">f:<span id="fval">0</span>
+		<input type="botton" id="clear" value="clear">
 	</div>
 	<script type="text/javascript" src="src/index.js"></script>
 </body>
