--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<canvas id="c1" width="700" height="700"></canvas>
 	<canvas id="c2" width="700" height="700"></canvas>
 	<canvas id="c3" width="700" height="700"></canvas>
+	<script type="text/javascript" src="src/radar.js"></script>
 	<script type="text/javascript" src="src/index.js"></script>
 </body>
 </html>
